Remove deprecated API usage